--- a/elements/elements.html
+++ b/elements/elements.html
@@ -29,6 +29,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/yasgui/yasgui.html">
 <link rel="import" href="../bower_components/sentiment-chart/sentiment-chart.html">
 <link rel="import" href="../bower_components/ldf-client/ldf-client.html">
+<link rel="import" href="../bower_components/google-chart-elk/google-chart.html">
+<link rel="import" href="../bower_components/material-search/material-search.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
@@ -43,3 +45,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
+<link rel="import" href="dashboard-elk/dashboard-elk.html">
