--- a/elements/routing.html
+++ b/elements/routing.html
@@ -23,6 +23,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'video';
     });
 
+    page('/dashelk', function () {
+      app.route = 'dashelk';
+    });
+
     page('/editor', function () {
       app.route = 'editor';
     });
