--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --accent-color: #536DFE;
     --primary-background-color: #637DFF;
     --primary-text-color: #212121;
-    --secondary-text-color: #727272;
+    --secondary-text-color: #0288D1;
     --disabled-text-color: #bdbdbd;
     --divider-color: #B6B6B6;
 
