--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -22,14 +22,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Application theme */
 
   :root {
-    --dark-primary-color: #0288D1;
-    --default-primary-color: #03A9F4;
-    --light-primary-color: #B3E5FC;
+    --dark-primary-color: #303F9F;
+    --default-primary-color: #3F51B5;
+    --light-primary-color: #C5CAE9;
     --text-primary-color: #ffffff; /*text/icons*/
-    --accent-color: #536DFE;
-    --primary-background-color: #637DFF;
+    --accent-color: #FF4081;
+    --primary-background-color: #FF5091;
     --primary-text-color: #212121;
-    --secondary-text-color: #0288D1;
+    --secondary-text-color: #727272;
     --disabled-text-color: #bdbdbd;
     --divider-color: #B6B6B6;
 
