Dashboard Tourpedia added

--- a/elements/routing.html
+++ b/elements/routing.html
@@ -23,8 +23,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'video';
     });
 
-    page('/dashelk', function () {
-      app.route = 'dashelk';
+    page('/dashtwitter', function () {
+      app.route = 'dashtwitter';
+    });
+
+    page('/dashtourpedia', function () {
+      app.route = 'dashtourpedia';
     });
 
     page('/editor', function () {
