--- a/index.html
+++ b/index.html
@@ -90,9 +90,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Demo Video</span>
           </a>
 
-          <a data-route="dashelk" href="/dashelk">
+          <a data-route="dashtwitter" href="/dashtwitter">
+            <iron-icon icon="svg-sample-icons:twitter"></iron-icon>
+            <span>Dashboard Twitter</span>
+          </a>
+
+          <a data-route="dashtourpedia" href="/dashtourpedia">
             <iron-icon icon="dashboard"></iron-icon>
-            <span>Dashboard ELK</span>
+            <span>Dashboard Tourpedia</span>
           </a>
 
           <a data-route="editor" href="/editor">
@@ -162,8 +167,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </paper-material>
             </section>
 
-            <section data-route="dashelk">
-              <dashboard-elk></dashboard-elk>
+            <section data-route="dashtwitter">
+              <dashboard-twitter></dashboard-twitter>
+            </section>
+
+            <section data-route="dashtourpedia">
+              <dashboard-tourpedia></dashboard-tourpedia>
             </section>
 
             <section data-route="editor">
