Added reviews, maps to Tourpedia and Slovakian Dashboard

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -11,6 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-icons/social-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/iron-iconset-svg/demo/svg-sample-icons.html">
@@ -48,3 +49,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="dashboard-twitter/dashboard-twitter.html">
 <link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
+<link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">
