--- a/elements/routing.html
+++ b/elements/routing.html
@@ -31,8 +31,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'dashtourpedia';
     });
 
-    page('/editor', function () {
-      app.route = 'editor';
+    page('/dashslovakia', function () {
+      app.route = 'dashslovakia';
     });
 
     // add #! before urls
