--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -22,12 +22,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Application theme */
 
   :root {
-    --dark-primary-color: #303F9F;
-    --default-primary-color: #3F51B5;
-    --light-primary-color: #C5CAE9;
+    --dark-primary-color: #0097A7;
+    --default-primary-color: #00BCD4;
+    --light-primary-color: #B2EBF2;
     --text-primary-color: #ffffff; /*text/icons*/
-    --accent-color: #FF4081;
-    --primary-background-color: #FF5091;
+    --accent-color: #FFC107;
+    --primary-background-color: #FFD127;
     --primary-text-color: #212121;
     --secondary-text-color: #727272;
     --disabled-text-color: #bdbdbd;
