New GSI logo added, main color changed

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <!-- Drawer Toolbar -->
         <paper-toolbar id="drawerToolbar">
-          <img src="http://demos.gsi.dit.upm.es/ftt/img/logo_gsi.png" style="height: 50px">
+          <img src="http://vps161.cesvima.upm.es/images/stories/logos/gsi.png" style="height: 50px">
         </paper-toolbar>
 
         <!-- Drawer Content -->
