--- a/styles/app-theme.html
+++ b/styles/app-theme.html
@@ -22,8 +22,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Application theme */
 
   :root {
-    --dark-primary-color: #0097A7;
-    --default-primary-color: #00BCD4;
+    --dark-primary-color: #00629B;
+    --default-primary-color: #00A9E0;
     --light-primary-color: #B2EBF2;
     --text-primary-color: #ffffff; /*text/icons*/
     --accent-color: #FFC107;
