--- a/elements/dashboard-tourpedia/dashboard-tourpedia.html
+++ b/elements/dashboard-tourpedia/dashboard-tourpedia.html
@@ -293,10 +293,11 @@
             </reviews-table>
           </div>
           <div class="chart_container" style="right: 0; float: right"> 
+          <paper-button id="buttonMap" on-click="change"> Add marker</paper-button>
             <paper-button id="buttonMap" on-click="openMap">See on a map</paper-button>
             <template is="dom-if" if="{{bool}}">
             <leaflet-map fit-to-markers>      
-              <template is="dom-repeat" items="{{places}}" as="place">      
+              <template is="dom-repeat" items="[[getPoints(places.*)]]" as="place">      
                 <leaflet-marker latitude="{{place.lat}}" longitude="{{place.long}}" title="{{place.name}}"> 
                     <b>Name:</b>
                     <span>{{place.name}}</span>
@@ -339,6 +340,13 @@
       openMap: function() {
         this.bool = true
         this.$.buttonMap.style.display = "none"
+      },
+      change: function() {
+        this.set('places', this.places.concat({'lat': 40.908899, 'long': 10.4890, 'name': 'Algo'}))
+        console.log("hola")
+      },
+      getPoints: function(f) {
+        return f.base;
       }
     });
   </script>
