First release version

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -47,6 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="my-list/my-list.html">
+<link rel="import" href="dashboard-dbpedia/dashboard-dbpedia.html">
 <link rel="import" href="dashboard-twitter/dashboard-twitter.html">
 <link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
 <link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">
