--- a/elements/my-greeting/my-greeting.html
+++ b/elements/my-greeting/my-greeting.html
@@ -9,22 +9,88 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <dom-module id="my-greeting">
-  <style>
-    :host {
-      display: block;
-    }
-
-    @media (max-width: 600px) {
-      h1.paper-font-display1 {
-        font-size: 24px;
-      }
-    }
-  </style>
+  <link rel="import" type="css" href="my-greeting.css">
   <template>
-    <h1 class="paper-font-display1"><span>{{greeting}}</span></h1>
-    <span class="paper-font-body2">Update text to change the greeting.</span>
-    <!-- Listens for "input" event and sets greeting to <input>.value -->
-    <input class="paper-font-body2" value="{{greeting::input}}">
+    <div class="content">
+      <h2 class="title">ANALYSIS</h2>
+      <span class="small">Check our analysis features and test it</span>
+      </br>
+      <div class="row">
+        <div class="element">
+          <div class="ring ring-blue">
+            <a data-route="dashtourpedia" href="/dashtourpedia">
+              <div class="circletag1"></div>
+            </a>
+          </div>
+          <h5 class="blue-border-bottom">Intuitive Workflow</h5>
+          <p>Identification, evaluation, analysis, dissemination – a quick guide through the intelligence process.</p>
+        </div>
+        <div class="element">
+          <div class="ring ring-teal">
+            <a data-route="dashtourpedia" href="/dashtourpedia">
+              <div class="circletag2"></div>
+            </a>
+          </div>
+          <h5 class="teal-border-bottom">Semantic Technology</h5>
+          <p>Understanding language and transforming data into applicable knowledge. Search in natural language.</p>
+        </div>
+        <div class="element">
+          <div class="ring ring-ambar">
+            <a data-route="dashtourpedia" href="/dashtourpedia">
+              <div class="circletag3"></div>
+            </a>
+          </div>
+          <h5 class="ambar-border-bottom">Visualisation</h5>
+          <p>Easy navigation and sophisticated visualisation tools guide our users through the complexity of large data volumes.</p>
+        </div>
+        <div class="element">
+          <div class="ring ring-grey">
+            <a data-route="dashtourpedia" href="/dashtourpedia">
+              <div class="circletag4"></div>
+            </a>
+          </div>
+          <h5 class="grey-border-bottom">Performance</h5>
+          <p>Data accuracy and high speed are key prerequisites for the platform’s success. We use platforms oriented to big data to perform speed.</p>
+        </div>
+      </div>
+    </div>
+    <div class="cd-fixed-bg cd-bg-1">
+      <h1 class="title-blue">
+        Social Media Analysis
+      </h1>
+
+      <h3>
+        Evaluating Millions of Sources in Seconds.
+      </h3>
+
+      <div class="row">
+        <a href="/dashtourpedia"><button class="button-span">Dashboard</button></a>
+        <a href="/dashdbpedia"><button class="button-span">Query Editor</button></a>
+        <a href="#"><button class="button-span">Emotions</button></a>
+      </div>
+    </div>
+    <div class="bucket -no-bottom g-bg-slate-grey page0 js-photo-stream">
+      <div class="-icon-headline">
+        <div class="row -gutterless">
+            <h3 class="bucket__headline h3 left -with-icon -width-1-2 -mobile-width-1-2 -mobile-larger g-color-white">
+              <span class="gsi-title">
+                See the GSI Group action
+              </span>
+              <a class="git" style="color: #03a9f4;" href="https://github.com/gsi-upm/">View on&nbsp;Github</a>
+          </h3>
+        </div>
+        <div class="row -gutterless -extra-bottom-padding">
+          <p class="little-text">
+            Check out the current projects from GSI&nbsp;Group.
+          </p>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="copyright"> 
+          <small> © 2016 Grupo de Sistemas Inteligentes, DIT-UPM </small>
+        </div>
+      </div>
+    </div>
   </template>
 
   <script>
@@ -33,11 +99,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         is: 'my-greeting',
 
         properties: {
-          greeting: {
-            type: String,
-            value: 'Welcome!',
-            notify: true
-          }
         }
       });
     })();
