--- a/index.html
+++ b/index.html
@@ -85,25 +85,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Home</span>
           </a>
 
-          <a data-route="video" href="/video">
+          <!--<a data-route="video" href="/video">
             <iron-icon icon="visibility"></iron-icon>
             <span>Demo Video</span>
+          </a>-->
+
+          <a data-route="dashdbpedia" href="/dashdbpedia">
+            <iron-icon icon="language"></iron-icon>
+            <span>Sparql DBPedia</span>
           </a>
 
-          <a data-route="dashtwitter" href="/dashtwitter">
+          <!--<a data-route="dashtwitter" href="/dashtwitter">
             <iron-icon icon="svg-sample-icons:twitter"></iron-icon>
             <span>Dashboard Twitter</span>
-          </a>
+          </a>-->
 
           <a data-route="dashtourpedia" href="/dashtourpedia">
             <iron-icon icon="dashboard"></iron-icon>
             <span>Dashboard Tourpedia</span>
           </a>
 
-          <a data-route="dashslovakia" href="/dashslovakia">
+          <!--<a data-route="dashslovakia" href="/dashslovakia">
             <iron-icon icon="social:public"></iron-icon>
             <span>Dashboard Slovakia</span>
-          </a>
+          </a>-->
         </paper-menu>
       </paper-scroll-header-panel>
 
@@ -135,29 +140,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
             <section data-route="home">
-              <material-search></material-search>
-              <paper-material elevation="1">
-
-                <ldf-client
-                    id="ldf-client-streaming"
-                    response-format="streaming"
-                    query="PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#> 
-                            PREFIX dbpedia: <http://dbpedia.org/resource/>
-                            PREFIX dbpprop: <http://dbpedia.org/property/>
-                            PREFIX dbpedia-owl: <http://dbpedia.org/ontology/> 
-                                    SELECT DISTINCT ?performer ?name WHERE {
-                              ?work dbpedia-owl:writer dbpedia:Michael_Jackson;
-                                    dbpedia-owl:musicalArtist ?performer.
-                              OPTIONAL {
-                                ?performer rdfs:label ?name.
-                                FILTER LANGMATCHES(LANG(?name), 'EN')
-                              }
-                            }"
-                    start-fragment="http://fragments.dbpedia.org/2015/en">
-                </ldf-client>
-
-                <div style="overflow: hidden"><table><tr><td id="td2"></td></tr></table></div>
-              </paper-material>
+              <my-greeting></my-greeting>
             </section>
 
             <section data-route="video">
@@ -165,6 +148,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <h2 class="paper-font-display2">Demo Video</h2>
 		            <sentiment-chart width="620px" height="350px"></sentiment-chart>
               </paper-material>
+            </section>
+
+            <section data-route="dashdbpedia">
+              <dashboard-dbpedia></dashboard-dbpedia>
             </section>
 
             <section data-route="dashtwitter">
