--- a/elements/dashboard-twitter/dashboard-twitter.html
+++ b/elements/dashboard-twitter/dashboard-twitter.html
@@ -23,6 +23,10 @@
   </style>
 
   <template>
+    <iron-ajax auto
+        url="/endpoint.json"
+        handle-as="json"
+        last-response="{{endpoint}}"></iron-ajax>
     <material-search search-value="{{query}}"></material-search>
     <br>
     <div style="width: 100%; display: inline-block">
@@ -33,7 +37,7 @@
           subindex="tweet"
           field="sentiment"
           fields='["time_zone","place.name","sentiment"]'
-          host='localhost:9200'
+          host='{{endpoint}}'
           id='pie-chart1'
           extra-id='pie-chart1'
           type='pie'
@@ -52,7 +56,7 @@
           subindex="tweet"
           field="place.name"
           fields='["time_zone","place.name","sentiment"]'
-          host='localhost:9200'
+          host='{{endpoint}}'
           id='pie-chart2'
           extra-id='pie-chart2'
           type='pie'
@@ -73,7 +77,7 @@
           subindex="tweet"
           field="retweet_count"
           fields='["time_zone","place.name","sentiment"]'
-          host='localhost:9200'
+          host='{{endpoint}}'
           id='bar-chart1'
           extra-id='bar-chart1'
           type='bar'
@@ -93,7 +97,7 @@
           subindex="tweet"
           field="time_zone"
           fields='["time_zone","place.name","sentiment"]'
-          host='localhost:9200'
+          host='{{endpoint}}'
           id='bar-chart2'
           extra-id='bar-chart2'
           type='bar'
@@ -114,7 +118,7 @@
             subindex="tweet"
             field="entities.hashtags.text"
             fields='["time_zone","place.name","sentiment"]'
-            host='localhost:9200'
+            host='{{endpoint}}'
             id='table-chart1'
             extra-id='table-chart1'
             type='table'
