Dashboard ftt added

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -50,4 +50,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="dashboard-dbpedia/dashboard-dbpedia.html">
 <link rel="import" href="dashboard-twitter/dashboard-twitter.html">
 <link rel="import" href="dashboard-tourpedia/dashboard-tourpedia.html">
+<link rel="import" href="dashboard-ftt/dashboard-ftt.html">
 <link rel="import" href="dashboard-slovakia/dashboard-slovakia.html">
