--- a/elements/routing.html
+++ b/elements/routing.html
@@ -35,6 +35,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'dashtourpedia';
     });
 
+    page('/dashftt', function () {
+      app.route = 'dashslovakia';
+    });
+
     page('/dashslovakia', function () {
       app.route = 'dashslovakia';
     });
