--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Dashboard Tourpedia</span>
           </a>
 
+          <!--<a data-route="dashftt" href="/dashftt">
+            <iron-icon icon="face"></iron-icon>
+            <span>Dashboard FTT</span>
+          </a>-->
+
           <!--<a data-route="dashslovakia" href="/dashslovakia">
             <iron-icon icon="social:public"></iron-icon>
             <span>Dashboard Slovakia</span>
@@ -160,6 +165,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="dashtourpedia">
               <dashboard-tourpedia></dashboard-tourpedia>
+            </section>
+
+            <section data-route="dashftt">
+              <dashboard-ftt></dashboard-ftt>
             </section>
 
             <section data-route="dashslovakia">
