--- a/elements/dashboard-ftt/dashboard-ftt.html
+++ b/elements/dashboard-ftt/dashboard-ftt.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../../bower_components/material-search/material-search.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/google-chart-elk/google-chart.html">
+<link rel="import" href="../../bower_components/chernoff-faces/chernoff-faces.html">
 
 
 <dom-module id="dashboard-ftt">
@@ -132,6 +133,8 @@
           </google-chart>
         </div>
       </div>
+      
+    <chernoff-faces></chernoff-faces>
   </template>
 
   <script>
