--- a/elements/elements.html
+++ b/elements/elements.html
@@ -33,6 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/ldf-client/ldf-client.html">
 <link rel="import" href="../bower_components/google-chart-elk/google-chart.html">
 <link rel="import" href="../bower_components/material-search/material-search.html">
+<link rel="import" href="../bower_components/chernoff-faces/chernoff-faces.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
