--- a/elements/routing.html
+++ b/elements/routing.html
@@ -36,7 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     });
 
     page('/dashftt', function () {
-      app.route = 'dashslovakia';
+      app.route = 'dashftt';
     });
 
     page('/dashslovakia', function () {
